@@ -4,6 +4,9 @@ CHANGES
 
 1.1 (unreleased)
 ----------------
+ - Fix a bug that had incorrect field names for shipping address [larubbio]
+ - Allow multiple adapters to be attached to one cart [larubbio]
+ - Update so adapters can be associated with getpaid.formgens one page checkout [larubbio]
 
 1.0 (2009-07-07)
 ----------------
